# jabronis_trading_bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  scheduled-intervals-update.md  schwab-trading-bot-spec.md
config/: settings.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/data/: historical.rs  mod.rs  news.rs  quotes.rs  sentiment.rs
src/llm/: client.rs  mod.rs  prompts.rs  response.rs  sanitizer.rs
src/logging/: audit.rs
src/schwab/: auth.rs  client.rs  mod.rs  models.rs  orders.rs
src/trading/: decision.rs  executor.rs  mod.rs  portfolio.rs  rules.rs  state.rs
tests/: integration_tests.rs  unit_tests.rs
