[package]
name = "schwab_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
config = "0.14"
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }
url = "2"
rust_decimal = { version = "1", features = ["serde"] }
dashmap = "6"
oauth2 = "4"
open = "5"
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rcgen = "0.14.7"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
dirs = "6.0.0"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
